--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.18.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material-nextjs": "^5.15.11",
+    "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
