--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material-nextjs": "^5.15.11",
     "axios": "^1.6.8",
+    "markdown-to-jsx": "^7.4.3",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
